--- a/frontend/config/locales/en.yml
+++ b/frontend/config/locales/en.yml
@@ -20,9 +20,9 @@ en:
     link_to: Link To
     add_prefix: Add
     merge_confirm_title: Merge this record?
-    merge_subject_confirm_message: The subject '%{target}' will be deleted and any linked records will be re-linked to the subject you selected.
-    merge_agent_confirm_message: The agent '%{target}' will be deleted and any linked records will be re-linked to the agent you selected.
-    merge_resource_confirm_message: The agent '%{target}' will be deleted and any linked records will be re-linked to the record you selected.
+    merge_subject_confirm_message: "The subject '%{target}' will be deleted and any linked records will be re-linked to the subject you selected."
+    merge_agent_confirm_message: "The agent '%{target}' will be deleted and any linked records will be re-linked to the agent you selected."
+    merge_resource_confirm_message: "The resource '%{target}' will be deleted and any linked records will be re-linked to the record you selected."
     move: Move
     move_up_a_level: Up a Level
     move_up: Up
@@ -258,7 +258,7 @@ en:
       section:
         basic_information: Basic Information
         dates_of_existence: Dates of Existence
-        name: Names
+        name: Name Forms
         contacts: Contact Details
         search_embedded: Linked Records
       action:
@@ -512,7 +512,7 @@ en:
       section:
         use_date: Date(s) of Name Use
       action:
-        add: Add Name
+        add: Add Name Form
 
   note:
     _frontend:
@@ -603,7 +603,7 @@ en:
       messages:
         preview_pending: Subject Preview
       action:
-        add: Add Subject Heading
+        add: Add Term/Subdivision
 
   subject:
     _frontend:
@@ -616,7 +616,7 @@ en:
         please_select_a_subject_to_merge: Please select a subject
       section:
         basic_information: Basic Information
-        terms: Subject Headings
+        terms: Terms and Subdivisions
         search_embedded: Linked Records
       action:
         create: Create Subject
