--- a/common/locales/enums/en.yml
+++ b/common/locales/enums/en.yml
@@ -5,232 +5,232 @@ en:
       outcome: Outcome
       transfer: Transfer
     linked_agent_archival_record_relators:
-      act: Actor
-      adp: Adapter
-      anl: Analyst
-      anm: Animator
-      ann: Annotator
-      app: Applicant
-      arc: Architect
-      arr: Arranger
-      acp: Art copyist
-      art: Artist
-      ard: Artistic director
-      asg: Assignee
-      asn: Associated name
-      att: Attributed name
-      auc: Auctioneer
-      aut: Author
-      aqt: Author in quotations or text extracts
-      aft: Author of afterword, colophon, etc.
-      aud: Author of dialog
-      aui: Author of introduction, etc.
-      aus: Author of screenplay, etc.
-      ant: Bibliographic antecedent
-      bnd: Binder
-      bdd: Binding designer
-      blw: Blurb writer
-      bkd: Book designer
-      bkp: Book producer
-      bjd: Bookjacket designer
-      bpd: Bookplate designer
-      bsl: Bookseller
-      cll: Calligrapher
-      ctg: Cartographer
-      cns: Censor
-      chr: Choreographer
-      cng: Cinematographer
-      cli: Client
-      clb: Collaborator
-      col: Collector
-      clt: Collotyper
-      clr: Colorist
-      cmm: Commentator
-      cwt: Commentator for written text
-      com: Compiler
-      cpl: Complainant
-      cpt: Complainant-appellant
-      cpe: Complainant-appellee
-      cmp: Composer
-      cmt: Compositor
-      ccp: Conceptor
-      cnd: Conductor
-      con: Conservator
-      csl: Consultant
-      csp: Consultant to a project
-      cos: Contestant
-      cot: Contestant-appellant
-      coe: Contestant-appellee
-      cts: Contestee
-      ctt: Contestee-appellant
-      cte: Contestee-appellee
-      ctr: Contractor
-      ctb: Contributor
-      cpc: Copyright claimant
-      cph: Copyright holder
-      crr: Corrector
-      crp: Correspondent
-      cst: Costume designer
-      cov: Cover designer
-      cre: Creator
-      cur: Curator of an exhibition
-      dnc: Dancer
-      dtc: Data contributor
-      dtm: Data manager
-      dte: Dedicatee
-      dto: Dedicator
-      dfd: Defendant
-      dft: Defendant-appellant
-      dfe: Defendant-appellee
-      dgg: Degree grantor
-      dln: Delineator
-      dpc: Depicted
-      dpt: Depositor
-      dsr: Designer
-      drt: Director
-      dis: Dissertant
-      dbp: Distribution place
-      dst: Distributor
-      dnr: Donor
-      drm: Draftsman
-      dub: Dubious author
-      edt: Editor
-      elg: Electrician
-      elt: Electrotyper
-      eng: Engineer
-      egr: Engraver
-      etr: Etcher
-      evp: Event place
-      exp: Expert
-      fac: Facsimilist
-      fld: Field director
-      flm: Film editor
-      fpy: First party
-      frg: Forger
-      fmo: Former owner
-      fnd: Funder
-      gis: Geographic information specialist
-      grt: Graphic technician
-      hnr: Honoree
-      hst: Host
-      ilu: Illuminator
-      ill: Illustrator
-      ins: Inscriber
-      itr: Instrumentalist
-      ive: Interviewee
-      ivr: Interviewer
-      inv: Inventor
-      lbr: Laboratory
-      ldr: Laboratory director
-      lsa: Landscape architect
-      led: Lead
-      len: Lender
-      lil: Libelant
-      lit: Libelant-appellant
-      lie: Libelant-appellee
-      lel: Libelee
-      let: Libelee-appellant
-      lee: Libelee-appellee
-      lbt: Librettist
-      lse: Licensee
-      lso: Licensor
-      lgd: Lighting designer
-      ltg: Lithographer
-      lyr: Lyricist
-      mfp: Manufacture place
-      mfr: Manufacturer
-      mrb: Marbler
-      mrk: Markup editor
-      mdc: Metadata contact
-      mte: Metal-engraver
-      mod: Moderator
-      mon: Monitor
-      mcp: Music copyist
-      msd: Musical director
-      mus: Musician
-      nrt: Narrator
-      opn: Opponent
-      orm: Organizer of meeting
-      org: Originator
-      oth: Other
-      own: Owner
-      ppm: Papermaker
-      pta: Patent applicant
-      pth: Patent holder
-      pat: Patron
-      prf: Performer
-      pma: Permitting agency
-      pht: Photographer
-      ptf: Plaintiff
-      ptt: Plaintiff-appellant
-      pte: Plaintiff-appellee
-      plt: Platemaker
-      prt: Printer
-      pop: Printer of plates
-      prm: Printmaker
-      prc: Process contact
-      pro: Producer
-      pmn: Production manager
-      prd: Production personnel
-      prp: Production place
-      prg: Programmer
-      pdr: Project director
-      pfr: Proofreader
-      prv: Provider
-      pup: Publication place
-      pbl: Publisher
-      pbd: Publishing director
-      ppt: Puppeteer
-      rcp: Recipient
-      rce: Recording engineer
-      rcd: Recordist
-      red: Redactor
-      ren: Renderer
-      rpt: Reporter
-      rps: Repository
-      rth: Research team head
-      rtm: Research team member
-      res: Researcher
-      rsp: Respondent
-      rst: Respondent-appellant
-      rse: Respondent-appellee
-      rpy: Responsible party
-      rsg: Restager
-      rev: Reviewer
-      rbr: Rubricator
-      sce: Scenarist
-      sad: Scientific advisor
-      scr: Scribe
-      scl: Sculptor
-      spy: Second party
-      sec: Secretary
-      std: Set designer
-      stg: Setting
-      sgn: Signer
-      sng: Singer
-      sds: Sound designer
-      spk: Speaker
-      spn: Sponsor
-      stm: Stage manager
-      stn: Standards body
-      str: Stereotyper
-      stl: Storyteller
-      sht: Supporting host
-      srv: Surveyor
-      tch: Teacher
-      tcd: Technical director
-      ths: Thesis advisor
-      trc: Transcriber
-      trl: Translator
-      tyd: Type designer
-      tyg: Typographer
-      uvp: University place
-      vdg: Videographer
-      voc: Vocalist
-      wit: Witness
-      wde: Wood-engraver
-      wdc: Woodcutter
-      wam: Writer of accompanying material
+      act: Actor (act)
+      adp: Adapter (adp)
+      anl: Analyst (anl)
+      anm: Animator (anm)
+      ann: Annotator (ann)
+      app: Applicant (app)
+      arc: Architect (arc)
+      arr: Arranger (arr)
+      acp: Art copyist (acp)
+      art: Artist (art)
+      ard: Artistic director (ard)
+      asg: Assignee (asg)
+      asn: Associated name (asn)
+      att: Attributed name (att)
+      auc: Auctioneer (auc)
+      aut: Author (aut)
+      aqt: Author in quotations or text extracts (aqt)
+      aft: Author of afterword, colophon, etc. (aft)
+      aud: Author of dialog (aud)
+      aui: Author of introduction, etc. (aui)
+      aus: Author of screenplay, etc. (aus)
+      ant: Bibliographic antecedent (ant)
+      bnd: Binder (bnd)
+      bdd: Binding designer (bdd)
+      blw: Blurb writer (blw)
+      bkd: Book designer (bkd)
+      bkp: Book producer (bkp)
+      bjd: Bookjacket designer (bjd)
+      bpd: Bookplate designer (bpd)
+      bsl: Bookseller (bsl)
+      cll: Calligrapher (cll)
+      ctg: Cartographer (ctg)
+      cns: Censor (cns)
+      chr: Choreographer (chr)
+      cng: Cinematographer (cng)
+      cli: Client (cli)
+      clb: Collaborator (clb)
+      col: Collector (col)
+      clt: Collotyper (clt)
+      clr: Colorist (clr)
+      cmm: Commentator (cmm)
+      cwt: Commentator for written text (cwt)
+      com: Compiler (com)
+      cpl: Complainant (cpl)
+      cpt: Complainant-appellant (cpt)
+      cpe: Complainant-appellee (cpe)
+      cmp: Composer (cmp)
+      cmt: Compositor (cmt)
+      ccp: Conceptor (ccp)
+      cnd: Conductor (cnd)
+      con: Conservator (con)
+      csl: Consultant (csl)
+      csp: Consultant to a project (csp)
+      cos: Contestant (cos)
+      cot: Contestant-appellant (cot)
+      coe: Contestant-appellee (coe)
+      cts: Contestee (cts)
+      ctt: Contestee-appellant (ctt)
+      cte: Contestee-appellee (cte)
+      ctr: Contractor (ctr)
+      ctb: Contributor (ctb)
+      cpc: Copyright claimant (cpc)
+      cph: Copyright holder (cph)
+      crr: Corrector (crr)
+      crp: Correspondent (crp)
+      cst: Costume designer (cst)
+      cov: Cover designer (cov)
+      cre: Creator (cre)
+      cur: Curator of an exhibition (cur)
+      dnc: Dancer (dnc)
+      dtc: Data contributor (dtc)
+      dtm: Data manager (dtm)
+      dte: Dedicatee (dte)
+      dto: Dedicator (dto)
+      dfd: Defendant (dfd)
+      dft: Defendant-appellant (dft)
+      dfe: Defendant-appellee (dfe)
+      dgg: Degree grantor (dgg)
+      dln: Delineator (dln)
+      dpc: Depicted (dpc)
+      dpt: Depositor (dpt)
+      dsr: Designer (dsr)
+      drt: Director (drt)
+      dis: Dissertant (dis)
+      dbp: Distribution place (dbp)
+      dst: Distributor (dst)
+      dnr: Donor (dnr)
+      drm: Draftsman (drm)
+      dub: Dubious author (dub)
+      edt: Editor (edt)
+      elg: Electrician (elg)
+      elt: Electrotyper (elt)
+      eng: Engineer (eng)
+      egr: Engraver (egr)
+      etr: Etcher (etr)
+      evp: Event place (evp)
+      exp: Expert (exp)
+      fac: Facsimilist (fac)
+      fld: Field director (fld)
+      flm: Film editor (flm)
+      fpy: First party (fpy)
+      frg: Forger (frg)
+      fmo: Former owner (fmo)
+      fnd: Funder (fnd)
+      gis: Geographic information specialist (gis)
+      grt: Graphic technician (grt)
+      hnr: Honoree (hnr)
+      hst: Host (hst)
+      ilu: Illuminator (ilu)
+      ill: Illustrator (ill)
+      ins: Inscriber (ins)
+      itr: Instrumentalist (itr)
+      ive: Interviewee (ive)
+      ivr: Interviewer (ivr)
+      inv: Inventor (inv)
+      lbr: Laboratory (lbr)
+      ldr: Laboratory director (ldr)
+      lsa: Landscape architect (lsa)
+      led: Lead (led)
+      len: Lender (len)
+      lil: Libelant (lil)
+      lit: Libelant-appellant (lit)
+      lie: Libelant-appellee (lie)
+      lel: Libelee (lel)
+      let: Libelee-appellant (let)
+      lee: Libelee-appellee (lee)
+      lbt: Librettist (lbt)
+      lse: Licensee (lse)
+      lso: Licensor (lso)
+      lgd: Lighting designer (lgd)
+      ltg: Lithographer (ltg)
+      lyr: Lyricist (lyr)
+      mfp: Manufacture place (mfp)
+      mfr: Manufacturer (mfr)
+      mrb: Marbler (mrb)
+      mrk: Markup editor (mrk)
+      mdc: Metadata contact (mdc)
+      mte: Metal-engraver (mte)
+      mod: Moderator (mod)
+      mon: Monitor (mon)
+      mcp: Music copyist (mcp)
+      msd: Musical director (msd)
+      mus: Musician (mus)
+      nrt: Narrator (nrt)
+      opn: Opponent (opn)
+      orm: Organizer of meeting (orm)
+      org: Originator (org)
+      oth: Other (oth)
+      own: Owner (own)
+      ppm: Papermaker (ppm)
+      pta: Patent applicant (pta)
+      pth: Patent holder (pth)
+      pat: Patron (pat)
+      prf: Performer (prf)
+      pma: Permitting agency (pma)
+      pht: Photographer (pht)
+      ptf: Plaintiff (ptf)
+      ptt: Plaintiff-appellant (ptt)
+      pte: Plaintiff-appellee (pte)
+      plt: Platemaker (plt)
+      prt: Printer (prt)
+      pop: Printer of plates (pop)
+      prm: Printmaker (prm)
+      prc: Process contact (prc)
+      pro: Producer (pro)
+      pmn: Production manager (pmn)
+      prd: Production personnel (prd)
+      prp: Production place (prp)
+      prg: Programmer (prg)
+      pdr: Project director (pdr)
+      pfr: Proofreader (pfr)
+      prv: Provider (prv)
+      pup: Publication place (pup)
+      pbl: Publisher (pbl)
+      pbd: Publishing director (pbd)
+      ppt: Puppeteer (ppt)
+      rcp: Recipient (rcp)
+      rce: Recording engineer (rce)
+      rcd: Recordist (rcd)
+      red: Redactor (red)
+      ren: Renderer (ren)
+      rpt: Reporter (rpt)
+      rps: Repository (rps)
+      rth: Research team head (rth)
+      rtm: Research team member (rtm)
+      res: Researcher (res)
+      rsp: Respondent (rsp)
+      rst: Respondent-appellant (rst)
+      rse: Respondent-appellee (rse)
+      rpy: Responsible party (rpy)
+      rsg: Restager (rsg)
+      rev: Reviewer (rev)
+      rbr: Rubricator (rbr)
+      sce: Scenarist (sce)
+      sad: Scientific advisor (sad)
+      scr: Scribe (scr)
+      scl: Sculptor (scl)
+      spy: Second party (spy)
+      sec: Secretary (sec)
+      std: Set designer (std)
+      stg: Setting (stg)
+      sgn: Signer (sgn)
+      sng: Singer (sng)
+      sds: Sound designer (sds)
+      spk: Speaker (spk)
+      spn: Sponsor (spn)
+      stm: Stage manager (stm)
+      stn: Standards body (stn)
+      str: Stereotyper (str)
+      stl: Storyteller (stl)
+      sht: Supporting host (sht)
+      srv: Surveyor (srv)
+      tch: Teacher (tch)
+      tcd: Technical director (tcd)
+      ths: Thesis advisor (ths)
+      trc: Transcriber (trc)
+      trl: Translator (trl)
+      tyd: Type designer (tyd)
+      tyg: Typographer (tyg)
+      uvp: University place (uvp)
+      vdg: Videographer (vdg)
+      voc: Vocalist (voc)
+      wit: Witness (wit)
+      wde: Wood-engraver (wde)
+      wdc: Woodcutter (wdc)
+      wam: Writer of accompanying material (wam)
     linked_agent_event_roles:
       authorizer: Authorizer
       executing_program: Executing Program
