--- a/frontend/config/locales/en.yml
+++ b/frontend/config/locales/en.yml
@@ -17,6 +17,7 @@ en:
     export: Export
     view: View
     spawn: Spawn
+    transfer_record: Transfer
     link_to: Link To
     add_prefix: Add
     merge_confirm_title: Merge this record?
@@ -40,6 +41,10 @@ en:
     suppress_confirm_title: Suppress this Record?
     suppress_confirm_message: "While a suppressed record will remain in the database, it will become hidden to most users and unavailable to most functions."
     transfer: Transfer
+    transfer_confirm_title: Transfer this record?
+    transfer_confirm_message: "The record '%{target}' will be transferred to the repository you selected"
+    transfer_successful: Transfer Successful
+    transfer_failed: Transfer Failed
     unset_default: Unset Default
     unsuppress: Unsuppress
     unsuppress_confirm_title: Unsuppress this Record?
@@ -240,6 +245,8 @@ en:
         suppressed: Accession <strong>%{accession.label}</strong> suppressed
         suppressed_info: Accession is suppressed and cannot be edited
         deleted: Accession <strong>%{accession.label}</strong> deleted
+        transfer_description: Transfer this accession to...
+        transfer_target: Select a repository to transfer into
       section:
         basic_information: Basic Information
       action:
@@ -604,6 +611,9 @@ en:
         preview_pending: Subject Preview
       action:
         add: Add Term/Subdivision
+
+  transfer:
+    ref: Destination Repository
 
   subject:
     _frontend:
