--- a/frontend/config/locales/en.yml
+++ b/frontend/config/locales/en.yml
@@ -385,7 +385,8 @@ en:
         merge_description: Merge this digital object into...
         please_select_a_digital_object_to_merge: Please select a digital object
         merged: Digital object(s) Merged
-
+        transfer_description: Transfer this resource to...
+        transfer_target: Select a repository to transfer into
       section:
         basic_information: Basic Information
       action:
