I18n the error message when no rows have been entered in the RDE form

--- a/frontend/config/locales/en.yml
+++ b/frontend/config/locales/en.yml
@@ -692,6 +692,7 @@ en:
     messages:
       error_prefix: Row
       success: "<div class='alert alert-success'>Children Created. Refreshing page...</div>"
+      no_rows: Please enter values for at least one row
     help:
       keyboard_shortcuts: |
                   <div><strong>Keyboard Shortcuts</strong></div>
