Switch digital object components to make identifier and title optional.
Made corresponding changes to use a "display_string" generated property to store the display string for the record.

--- a/common/locales/en.yml
+++ b/common/locales/en.yml
@@ -94,6 +94,7 @@ en:
     component_id: Identifier
     component_id_tooltip: |
         <p>A unique identifier for the Digital Object Component.</p>
+    dates: Dates
     _singular: Digital Object Component
     _plural: Digital Object Components
 
