Give admins the ability to assume the identity of another user

--- a/frontend/config/locales/en.yml
+++ b/frontend/config/locales/en.yml
@@ -144,7 +144,13 @@ en:
     event_type: Type
     identifier: Identifier
 
+  become-user:
+    become-user: Become User
+    failed: Failed to switch to the specified user
+    success: Successfully switched users
+
   navbar:
+    become-user: Become User
     brand: ArchivesSpace
     create: Create
     import: Import
