Add missing I18n entry for location navbar create action

--- a/frontend/config/locales/en.yml
+++ b/frontend/config/locales/en.yml
@@ -508,6 +508,7 @@ en:
         create: Create Location
         batch: Batch Locations
         save: Save Location
+        single: Single Location
 
   location_batch:
     _frontend:
