--- a/common/locales/en.yml
+++ b/common/locales/en.yml
@@ -699,29 +699,6 @@ en:
     option: Outline
     levels: Levels
 
-  container: &container_attributes
-    type_1: Container 1 Type 
-    type_1_tooltip: &container_type_tooltip |
-        <p>The type of the primary container in which the described material is housed.</p>
-        <p>Values in this Controlled Value List may be modified.</p>
-    indicator_1: Container 1 Indicator
-    indicator_1_tooltip: &container_indicator_tooltip |
-        <p>An alphanumeric expression for indicating the place of a container in a sequence of containers.</p>
-    barcode_1: Container 1 Barcode
-    barcode_1_tooltip: |
-        <p>A barcode for identifying the primary container.  May be used instead of or in supplement to the Container 1 Type.</p>
-    type_2: Container 2 Type
-    type_2_tooltip: *container_type_tooltip
-    indicator_2: Indicator 2
-    indicator_2_tooltip: *container_indicator_tooltip
-    type_3: Container 3 Type
-    type_3_tooltip: *container_type_tooltip
-    indicator_3: Indicator 3
-    indicator_3_tooltip: *container_indicator_tooltip
-    container_locations: Locations
-    _plural: Containers
-    _singular: Container
-
   instance: &instance_attributes
     instance_type: Type
     instance_type_tooltip: |
@@ -830,6 +807,39 @@ en:
         </ul>
     _plural: Extents
     _singular: Extent
+
+  container: &container_attributes
+    type_1: Container 1 Type 
+    type_1_tooltip: &container_type_tooltip |
+        <p>The type of the primary container in which the described material is housed.</p>
+        <p>Values in this Controlled Value List may be modified.</p>
+    indicator_1: Container 1 Indicator
+    indicator_1_tooltip: &container_indicator_tooltip |
+        <p>An alphanumeric expression for indicating the place of a container in a sequence of containers.</p>
+    barcode_1: Container 1 Barcode
+    barcode_1_tooltip: |
+        <p>A barcode for identifying the primary container.  May be used instead of or in supplement to the Container 1 Type.</p>
+    type_2: Container 2 Type
+    type_2_tooltip: *container_type_tooltip
+    indicator_2: Indicator 2
+    indicator_2_tooltip: *container_indicator_tooltip
+    type_3: Container 3 Type
+    type_3_tooltip: *container_type_tooltip
+    indicator_3: Indicator 3
+    indicator_3_tooltip: *container_indicator_tooltip
+    container_extent: Container Extent
+    container_extent_tooltip: |
+        <p>CONDITIONALLY REQUIRED FIELD: The extent of the container or containers described, usually in linear or volumetric units (e.g. linear feet or cubic meters). Do not confuse with an Extent subrecord.</p>
+        <p>Required if Container Extent Type is specified.</p>
+    container_extent_type: Container Extent Type
+    container_extent_type_tooltip: |
+        <p>CONDITIONALLY REQUIRED FIELD: A term indicating the type of unit used to measure the extent of materials described.
+        <p>Required if Container Extent is specified.</p>
+        <p>Values in this Controlled Value List may be modified.</p>
+        <p>See DACS 2.5</p>
+    container_locations: Locations
+    _plural: Containers
+    _singular: Container
 
   external_document: &external_document_attributes
     title: Title
@@ -945,7 +955,7 @@ en:
     date_type_message: Select a Type to enter normalized date or date range
     expression: Expression
     expression_tooltip: |
-        <p>CONDITIONALLY REQUIRED FIELD. A natural language expression specifying the date or date range of the materials in the accession. Required when a normalized date is not recorded.</p>
+        <p>CONDITIONALLY REQUIRED FIELD: A natural language expression specifying the date or date range of the materials in the accession. Required when a normalized date is not recorded.</p>
         <p>See DACS 2.4</p>
         <p>Examples:</p>
         <ul>
@@ -1189,7 +1199,7 @@ en:
   archival_object: &archival_object_attributes
     title: Title
     title_tooltip: |
-        <p>CONDITIONALLY REQUIRED FIELD. The title assigned to the materials described. An Archival Object must have either a Title or a Date subrecord.</p>
+        <p>CONDITIONALLY REQUIRED FIELD: The title assigned to the materials described. An Archival Object must have either a Title or a Date subrecord.</p>
         <p>See DACS 2.3</p>
         <p>Examples:</p>
         <ul>
