Limit the number of values returned by the generate sequence endpoint - limit to the number of rows in the RDE form (or 1000)

--- a/frontend/config/locales/en.yml
+++ b/frontend/config/locales/en.yml
@@ -711,6 +711,7 @@ en:
       sequence_count_warning: There are more rows than there are items in the sequence.
       preview_sequence: Preview Sequence Values
       sequence_summary: "%{count} items in the sequence:"
+      sequence_summary_with_maxsize: "For your %{limit} rows, the %{count} sequence values are:"
       sequence_from_required: From is required
       sequence_to_required: To is required
     reorder_columns:
