Add 'Validate Rows' action to RDE to perform a dry run submit and not perform a save

--- a/frontend/config/locales/en.yml
+++ b/frontend/config/locales/en.yml
@@ -701,6 +701,7 @@ en:
       showhide_none: All Columns Filtered
       fill_toggle: Fill Column
       reorder_toggle: Reorder Columns
+      validate_rows: Validate Rows
     fill_column:
       basic: Basic
       sequence: Sequence
