--- a/frontend/config/locales/en.yml
+++ b/frontend/config/locales/en.yml
@@ -58,6 +58,7 @@ en:
     delete_multiple_confirm_message: "<p>Please be aware <strong>you cannot undo this action</strong>.</p><p>This action will remove these records from the database, including any references they have to other records.</p>"
     export_eac: Download EAC-CPF
     export_ead: Download EAD
+    export_ead_unpub: Download EAD (incl. unpublished)
     export_mods: Download MODS
     export_mets: Download METS
     export_marc: Download MARCXML
