Squashed commit of the following:
commit 7265255f468a246cdd143791b2adfb06e913323e
Author: Payten Giles <payten.giles@gmail.com>
Date:   Thu Dec 5 15:47:57 2013 +1100

    WIP Only allow selection of files once an upload type has been chosen

commit 3b810e2fdf21205cfc60c883fbbda90e18c14574
Author: Payten Giles <payten.giles@gmail.com>
Date:   Wed Dec 4 16:15:37 2013 +1100

    WIP Add basic upload of multiple files to a stub jobs form

commit a1c54bf249c8e0d1750bf7ce5f151fcc431d3a87
Author: Payten Giles <payten.giles@gmail.com>
Date:   Wed Dec 4 08:29:07 2013 +1100

    WIP multiple file uploads and jobs

--- a/common/locales/en.yml
+++ b/common/locales/en.yml
@@ -1720,3 +1720,12 @@ en:
     you_must_provide_a_label__title_or_date: you must provide a Label, Title or Date
     location_fields_error: >
       You must either specify a barcode, a classification, or both a coordinate 1 label and coordinate 1 indicator
+  job:
+    _singular: Job
+    _plural: Jobs
+    import_type: Import Type
+    import_type_ead_xml: EAD
+    import_type_accession_csv: Accession CSV
+    import_type_digital_object_csv: Digital Object CSV
+    import_type_marcxml: MarcXML
+    import_type_marcxml_subjects_and_agents: MarcXML (Subjects and Agents Only)
