--- a/frontend/config/locales/en.yml
+++ b/frontend/config/locales/en.yml
@@ -724,6 +724,7 @@ en:
       success: "<div class='alert alert-success'>Children Created. Refreshing page...</div>"
       no_rows: Please enter values for at least one row
       rows_with_errors: "%{count} row(s) with an error - click a row field to view the errors for that row"
+      error_summary_header: "Errors in row:"
     help:
       keyboard_shortcuts: |
                   <div><strong>Keyboard Shortcuts</strong></div>
