Refactor aspace_feedback plugin to use local javascript

--- a/frontend/config/locales/en.yml
+++ b/frontend/config/locales/en.yml
@@ -6,6 +6,7 @@ en:
     batch: Batch
     browse: Browse
     cancel: Cancel
+    close: Close
     continue: Continue
     confirm: Confirm
     confirm_removal: Confirm Removal
