--- a/common/locales/en.yml
+++ b/common/locales/en.yml
@@ -1721,8 +1721,8 @@ en:
     location_fields_error: >
       You must either specify a barcode, a classification, or both a coordinate 1 label and coordinate 1 indicator
   job:
-    _singular: Job
-    _plural: Jobs
+    _singular: Import Job
+    _plural: Import Jobs
     import_type: Import Type
     import_type_ead_xml: EAD
     import_type_accession_csv: Accession CSV
