Fix errored/failed message and styling

--- a/common/locales/en.yml
+++ b/common/locales/en.yml
@@ -1733,5 +1733,5 @@ en:
     status_completed: Completed
     status_queued: Queued
     status_running: Running
-    status_errored: Errored
+    status_failed: Failed
     status_canceled: Canceled
