--- a/common/locales/en.yml
+++ b/common/locales/en.yml
@@ -1727,6 +1727,7 @@ en:
     import_type_ead_xml: EAD
     import_type_accession_csv: Accession CSV
     import_type_digital_object_csv: Digital Object CSV
+    import_type_eac_xml: EAC
     import_type_marcxml: MarcXML
     import_type_marcxml_subjects_and_agents: MarcXML (Subjects and Agents Only)
     status: Status
